--- a/index.html
+++ b/index.html
@@ -1024,8 +1024,10 @@
 			var content = this.nextElementSibling;
 			if (content.style.maxHeight){
 			  content.style.maxHeight = null;
+			  content.style.ransitionDelay = "0s";
 			} else {
 			  content.style.maxHeight = content.scrollHeight + "px";
+			  content.style.ransitionDeley = "0.9s";
 			} 
 		  });
 		}
@@ -1042,10 +1044,8 @@
 		function scrollFunction() {
 			if (document.body.scrollTop > 20 || document.documentElement.scrollTop > 20) {
 				mybutton.style.display = "block";
-				mybutton.style.ransitionDelay = "0s";
 			} else {
 				mybutton.style.display = "none";
-				mybutton.style.ransitionDeley = "0.9s";
 			}
 		}
 
