--- a/index.html
+++ b/index.html
@@ -1024,11 +1024,11 @@
 			var content = this.nextElementSibling;
 			if (content.style.maxHeight){
 			  content.style.maxHeight = null;
-			  content.style.ransitionDelay = "0s";
+			  coll[i].style.ransitionDelay = "0s";
 			} else {
 			  content.style.maxHeight = content.scrollHeight + "px";
-			  content.style.ransitionDeley = "0.9s";
-			} 
+			  coll[i].style.ransitionDeley = "0.9s";
+			}
 		  });
 		}
 	</script>
