--- a/index.html
+++ b/index.html
@@ -1024,10 +1024,10 @@
 			var content = this.nextElementSibling;
 			if (content.style.maxHeight){
 			  content.style.maxHeight = null;
-			  coll[i].style.ransitionDelay = "0s";
+			  content.style.ransitionDelay = "0s";
 			} else {
 			  content.style.maxHeight = content.scrollHeight + "px";
-			  coll[i].style.ransitionDeley = "0.9s";
+			  content.style.ransitionDeley = "0.9s";
 			}
 		  });
 		}
