--- a/index.html
+++ b/index.html
@@ -578,7 +578,7 @@
 						<thead>
 							<tr>
 								<th>Joueurs</th>
-								<th><abbr title="Nombre de pas moteur">Moteur</abbr></th>
+								<th><abbr title="Nombre de pas du moteur">Moteur</abbr></th>
 								<th><abbr title="Tirs qui ont atteint la cible">Tirs touché</abbr></th>
 								<th><abbr title="Tirs qui est dans le vide">Tirs dans l'eau</abbr></th>
 								<th><abbr title="Total nombre de tirs">Tirs globaux</abbr></th>
@@ -587,7 +587,7 @@
 						<tfoot>
 							<tr>
 								<th>Joueurs</th>
-								<th><abbr title="Nombre de pas moteur">Moteur</abbr></th>
+								<th><abbr title="Nombre de pas du moteur">Moteur</abbr></th>
 								<th><abbr title="Tirs qui ont atteint la cible">Tirs touché</abbr></th>
 								<th><abbr title="Tirs qui est dans le vide">Tirs dans l'eau</abbr></th>
 								<th><abbr title="Total nombre de tirs">Tirs globaux</abbr></th>
