--- a/index.html
+++ b/index.html
@@ -248,9 +248,21 @@
 							<a class="navbar-item" href="./#equipe">
 								Équipe
 							</a>
-							<a class="navbar-item" href="./#actu">
-								Actualités
-							</a>
+							<div class="navbar-item has-dropdown is-hoverable" href="./#actu">
+								<a class="navbar-link">
+									Actualités
+								</a>
+						
+								<div class="navbar-dropdown">
+									<p class="navbar-item">
+										10/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<a class="navbar-item" href="./#10022021-1">
+										Nom de domaine
+									</a>
+								</div>
+							</div>
 							<a class="navbar-item" href="./#galerie">
 								Galerie
 							</a>
@@ -413,7 +425,7 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
-				<button type="button" class="collapsible">10/02/2021 - Nom de domaine</button>
+				<button type="button" class="collapsible" id="10022021-1">10/02/2021 - Nom de domaine</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté arduitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
 					<p style="padding: 0 18px">Nous avons donc activé l'hébergement lié avec l'offre.</p>
