--- a/index.html
+++ b/index.html
@@ -84,6 +84,10 @@
 		nav.navbar {
 			background-color: #363636!important;
 		}
+		@media screen and (min-width: 1088px)
+		.navbar-dropdown {
+			background-color: #363636;
+		}
 		.content h2 {
 			color: white;
 		}
