--- a/index.html
+++ b/index.html
@@ -87,6 +87,9 @@
 		.navbar-dropdown {
 			background-color: #363636;
 		}
+		item.has-dropdown:hover .navbar-link {
+    		background-color: #363636;
+		}
 		.content h2 {
 			color: white;
 		}
