--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
 		.navbar-dropdown {
 			background-color: #363636;
 		}
-		item.has-dropdown:hover .navbar-link {
+		.navbar-item.has-dropdown:hover .navbar-link {
     		background-color: #363636;
 		}
 		.content h2 {
