--- a/index.html
+++ b/index.html
@@ -580,6 +580,29 @@
 						</div>
 					</div>
 				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813182685450338346/IMG_20210221_235425.jpg" alt="Base tank avec côtés">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813182755088236544/IMG_20210221_235529.jpg" alt="Base tank avec côtés et chaîne">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813182836126253116/IMG_20210221_235648.jpg" alt="Base tank avec côté sur le dos">
+							</figure>
+						</div>
+					</div>
+				</div>
 			</div>
 		</div>
 
