--- a/index.html
+++ b/index.html
@@ -87,9 +87,13 @@
 		.navbar-dropdown {
 			background-color: #363636;
 		}
+		.navbar-link {
+    		color: rgba(245,245,245,1);
+		}
 		.navbar-item.has-dropdown:hover .navbar-link {
     		background-color: #363636;
 		}
+
 		.content h2 {
 			color: white;
 		}
