--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 			background-color: #363636;
 		}
 		.navbar-link {
-    		color: rgba(245,245,245,1);
+    		color: rgba(245,245,245,1)!important;
 		}
 		.navbar-item.has-dropdown:hover .navbar-link {
     		background-color: #363636;
