--- a/index.html
+++ b/index.html
@@ -271,6 +271,17 @@
 									<a class="navbar-item" href="./#10022021-1">
 										Nom de domaine
 									</a>
+									<a class="navbar-item" href="./#10022021-2">
+										Reconnaissance vocale
+									</a>
+									<hr class="navbar-divider">
+									<p class="navbar-item">
+										16/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<a class="navbar-item" href="./#16022021-1">
+										Chaîne et roues/roulements
+									</a>
 								</div>
 							</div>
 							<a class="navbar-item" href="./#galerie">
@@ -441,14 +452,14 @@
 					<p style="padding: 0 18px">Nous avons donc activé l'hébergement lié avec l'offre.</p>
 					<p style="padding: 0 18px 2rem 18px;">C'est le début du développement site !</p>
 				</div>
-				<button type="button" class="collapsible">10/02/2021 - Reconnaissance vocal</button>
+				<button type="button" class="collapsible" id="10022021-2">10/02/2021 - Reconnaissance vocale</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Ugo, pour l'interface (application) a développé un code qui utilise <a class="is-link" href="https://cloud.google.com/speech-to-text" target="_blank">la détection de voix avec Google</a>.</p>
 					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
 					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
 					<img style="padding: 0 18px 2rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
 				</div>
-				<button type="button" class="collapsible">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
+				<button type="button" class="collapsible" id="16022021-1">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
 					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenages et "roues".</p>
