--- a/index.html
+++ b/index.html
@@ -265,14 +265,19 @@
 						
 								<div class="navbar-dropdown">
 									<p class="navbar-item">
-										10/02/2021
+										19/02/2021
 									</p>
 									<hr class="navbar-divider">
-									<a class="navbar-item" href="./#10022021-1">
-										Nom de domaine
+									<a class="navbar-item" href="./#17022021-1">
+										Echec TPU, redesign
 									</a>
-									<a class="navbar-item" href="./#10022021-2">
-										Reconnaissance vocale
+									<hr class="navbar-divider">
+									<p class="navbar-item">
+										17/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<a class="navbar-item" href="./#17022021-1">
+										Côté et importation des composants électronique du robot
 									</a>
 									<hr class="navbar-divider">
 									<p class="navbar-item">
@@ -281,6 +286,17 @@
 									<hr class="navbar-divider">
 									<a class="navbar-item" href="./#16022021-1">
 										Chaîne et roues/roulements
+									</a>
+									<hr class="navbar-divider">
+									<p class="navbar-item">
+										10/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<a class="navbar-item" href="./#10022021-1">
+										Nom de domaine
+									</a>
+									<a class="navbar-item" href="./#10022021-2">
+										Reconnaissance vocale
 									</a>
 								</div>
 							</div>
@@ -446,65 +462,12 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
-				<button type="button" class="collapsible" id="10022021-1">10/02/2021 - Nom de domaine</button>
+				<button type="button" class="collapsible">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté arduitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
-					<p style="padding: 0 18px">Nous avons donc activé l'hébergement lié avec l'offre.</p>
-					<p style="padding: 0 18px 2rem 18px;">C'est le début du développement site !</p>
-				</div>
-				<button type="button" class="collapsible" id="10022021-2">10/02/2021 - Reconnaissance vocale</button>
-				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Ugo, pour l'interface (application) a développé un code qui utilise <a class="is-link" href="https://cloud.google.com/speech-to-text" target="_blank">la détection de voix avec Google</a>.</p>
-					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
-					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
-					<img style="padding: 0 18px 2rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
-				</div>
-				<button type="button" class="collapsible" id="16022021-1">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
-				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
-					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenages et "roues".</p>
-					<p style="padding: 0 18px 2rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
-				</div>
-				<button type="button" class="collapsible">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
-				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
-					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
-					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons : le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
-					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester sommairement lors d'un test.</p>
-					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
-				</div>
-				<button type="button" class="collapsible">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
-				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">Aïe aïe ! Coup dur ! C'était pas loin mais visiblement un soucis d'impression de la chaîne souple qui dévait être totalement impriméee en TPU.</p>
-					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812406562571812924/IMG_20210219_203215.jpg" alt="Chaîne en TPU fail moitié impression">
-					<p style="padding: 0 18px;">Nous ne baissons pas les bras !! Mais afin d'éviter de perdre trop de temps sur le réglage pour du TPU, reprenons ce que nous savons faire, le PLA !</p>
-					<p style="padding: 0 18px;">Le temps d'un redesign de la chaîne qui devient une multitude de maillons !</p>
-					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="Chaîne avec maillons modélisation 3D">
-					<p style="padding: 0 18px">Forcément, on imprime pas une chaîne comme ça ! On aurait pu tenter mais ça aurait été risqué ! Nous avons fait maillon par maillon ! ;-)</p>
-					<div class="tile is-ancestor">
-						<div class="tile is-parent is-horizontal">
-							<div class="tile is-child">
-								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812418638921465896/IMG_20210219_212007.jpg" alt="Un maillon imrpimé" style="padding: 0;">
-								</figure>
-							</div>
-						</div>
-						<div class="tile is-parent is-horizontal">
-							<div class="tile is-child">
-								<figure class="image">
-									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812451354441285632/IMG_20210219_233010.jpg" alt="7 maillons de chaîne" style="padding: 0;">
-								</figure>
-							</div>
-						</div>
-						<div class="tile is-parent is-horizontal">
-							<div class="tile is-child">
-								<figure class="image">
-									<img src="https://media.discordapp.net/attachments/807610088361164810/812453817111019580/IMG_20210219_234100.jpg" alt="8 maillons de chaîne" style="padding: 0;">
-								</figure>
-							</div>
-						</div>
-					</div>
-					<p style="padding: 0 18px 2rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
+					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
+					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designé par Ugo.</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
+					<p style="padding: 0 18px 2rem 18px;">Au même titre que "Pas de bras, pas de chocolat", ici c'est : Pas de télécommande, pas de robot tank !</p>
 				</div>
 				<button type="button" class="collapsible">20/02/2021 - Impression 3D chaîne et engrange & CNC flancs du tank</button>
 				<div class="content collapse is-medium">
@@ -553,12 +516,65 @@
 					<p style="padding: 0 18px">Nous voici bien avancé pour la partie physique du robot, mais il n'y a pas que Davide qui a travaillé ! Regardez la partie plan 2D de la télécommande juste en dessous !</p>
 					<p style="padding: 0 18px 2rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continué toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
 				</div>
-				<button type="button" class="collapsible">20/02/2021 - Plan 2D - Télécommande</button>
+				<button type="button" class="collapsible" id="19022021-1">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
 				<div class="content collapse is-medium">
-					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
-					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designé par Ugo.</p>
-					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
-					<p style="padding: 0 18px 2rem 18px;">Au même titre que "Pas de bras, pas de chocolat", ici c'est : Pas de télécommande, pas de robot tank !</p>
+					<p style="padding: 1rem 18px 0 18px;">Aïe aïe ! Coup dur ! C'était pas loin mais visiblement un soucis d'impression de la chaîne souple qui dévait être totalement impriméee en TPU.</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812406562571812924/IMG_20210219_203215.jpg" alt="Chaîne en TPU fail moitié impression">
+					<p style="padding: 0 18px;">Nous ne baissons pas les bras !! Mais afin d'éviter de perdre trop de temps sur le réglage pour du TPU, reprenons ce que nous savons faire, le PLA !</p>
+					<p style="padding: 0 18px;">Le temps d'un redesign de la chaîne qui devient une multitude de maillons !</p>
+					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812404511078481949/unknown.png" alt="Chaîne avec maillons modélisation 3D">
+					<p style="padding: 0 18px">Forcément, on imprime pas une chaîne comme ça ! On aurait pu tenter mais ça aurait été risqué ! Nous avons fait maillon par maillon ! ;-)</p>
+					<div class="tile is-ancestor">
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812418638921465896/IMG_20210219_212007.jpg" alt="Un maillon imrpimé" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://cdn.discordapp.com/attachments/807610088361164810/812451354441285632/IMG_20210219_233010.jpg" alt="7 maillons de chaîne" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+						<div class="tile is-parent is-horizontal">
+							<div class="tile is-child">
+								<figure class="image">
+									<img src="https://media.discordapp.net/attachments/807610088361164810/812453817111019580/IMG_20210219_234100.jpg" alt="8 maillons de chaîne" style="padding: 0;">
+								</figure>
+							</div>
+						</div>
+					</div>
+					<p style="padding: 0 18px 2rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
+				</div>
+				<button type="button" class="collapsible" id="17022021-1">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
+					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
+					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons : le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
+					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester sommairement lors d'un test.</p>
+					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
+				</div>
+				<button type="button" class="collapsible" id="16022021-1">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
+					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenages et "roues".</p>
+					<p style="padding: 0 18px 2rem 18px;">Hâte de voir ça fonctionnel ! Pas vous ?</p>
+				</div>				
+				<button type="button" class="collapsible" id="10022021-2">10/02/2021 - Reconnaissance vocale</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Ugo, pour l'interface (application) a développé un code qui utilise <a class="is-link" href="https://cloud.google.com/speech-to-text" target="_blank">la détection de voix avec Google</a>.</p>
+					<p style="padding: 0 18px;">Nous allons l'implémenter afin de pouvoir donner des ordres au robot vocalement !</p>
+					<p style="padding: 0 18px;">En voici un petit aperçu :</p>
+					<img style="padding: 0 18px 2rem 18px;" width="50%" src="https://cdn.discordapp.com/attachments/807610088361164810/809154787739566150/unknown.png">
+				</div>
+				<button type="button" class="collapsible" id="10022021-1">10/02/2021 - Nom de domaine</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">C'est ce jour que nous avons acheté arduitank.be chez <a class="is-link" href="https://www.ovh.com/fr/order/webcloud/#/webCloud/domain/select?selection=~()&search=arduitank.be" target="_blank">OVH</a>.</p>
+					<p style="padding: 0 18px">Nous avons donc activé l'hébergement lié avec l'offre.</p>
+					<p style="padding: 0 18px 2rem 18px;">C'est le début du développement site !</p>
 				</div>
 			</div>
 		</div>
