--- a/index.html
+++ b/index.html
@@ -265,6 +265,17 @@
 						
 								<div class="navbar-dropdown">
 									<p class="navbar-item">
+										20/02/2021
+									</p>
+									<hr class="navbar-divider">
+									<a class="navbar-item" href="./#20022021-1">
+										Plan 2D, Télécommande
+									</a>
+									<a class="navbar-item" href="./#20022021-2">
+										Chaîne et engrenage & CNC flancs du tank
+									</a>
+									<hr class="navbar-divider">
+									<p class="navbar-item">
 										19/02/2021
 									</p>
 									<hr class="navbar-divider">
@@ -285,7 +296,7 @@
 									</p>
 									<hr class="navbar-divider">
 									<a class="navbar-item" href="./#16022021-1">
-										Chaîne et roues/roulements
+										Chaîne et roues
 									</a>
 									<hr class="navbar-divider">
 									<p class="navbar-item">
@@ -557,7 +568,7 @@
 					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester sommairement lors d'un test.</p>
 					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
 				</div>
-				<button type="button" class="collapsible" id="16022021-1">16/02/2021 - Modélisation 3D - Chaînes et roues/roulements</button>
+				<button type="button" class="collapsible" id="16022021-1">16/02/2021 - Modélisation 3D - Chaînes et roues</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">On entame la modélisation 3D sur Fusion 360 !</p>
 					<p style="padding: 0 18px;">Davide s'occupe de la réalisation des chenilles, engrenages et "roues".</p>
