--- a/index.html
+++ b/index.html
@@ -473,14 +473,14 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
-				<button type="button" class="collapsible">20/02/2021 - Plan 2D - Télécommande</button>
+				<button type="button" class="collapsible" id="20022021-1">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
 					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designé par Ugo.</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
 					<p style="padding: 0 18px 2rem 18px;">Au même titre que "Pas de bras, pas de chocolat", ici c'est : Pas de télécommande, pas de robot tank !</p>
 				</div>
-				<button type="button" class="collapsible">20/02/2021 - Impression 3D chaîne et engrange & CNC flancs du tank</button>
+				<button type="button" class="collapsible" id="20022021-2">20/02/2021 - Impression 3D chaîne et engrenage & CNC flancs du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en route, on ne l'arrête plus !</p>
 					<p style="padding: 0 18px;">Tous les maillons sont imprimés reste plus qu'à en faire une belle chaîne :</p>
