--- a/index.html
+++ b/index.html
@@ -79,6 +79,18 @@
 			/* The image used */
 			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/812778846465949696/IMG_20210220_211229.jpg);
 		}
+		.background-2blanks-board {
+			/* The image used */
+			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813182685450338346/IMG_20210221_235425.jpg);
+		}
+		.background-2blanks-board-chain {
+			/* The image used */
+			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813182755088236544/IMG_20210221_235529.jpg);
+		}
+		.background-2blanks-board-reverse {
+			/* The image used */
+			background-image: url(https://cdn.discordapp.com/attachments/807610088361164810/813182836126253116/IMG_20210221_235648.jpg);
+		}
 
 		/* Colors */
 		nav.navbar {
@@ -340,7 +352,7 @@
 			</nav>
 		</div>
 	
-		<div class="hero-body background-banner background-2Dplan-robot">
+		<div class="hero-body background-banner background-2blanks-board-reverse">
 			<!--<div class="container has-text-centered">
 				<p class="title" style="color: hsl(0, 0%, 21%)!important; font-size: 5rem; padding: 10rem 0 10rem 0;">
 					ArduiTank
@@ -648,7 +660,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-2Dplan-robot">
+		<div class="hero-body background-banner background-2blanks-board">
 		</div>
 		
 		<div class="hero-body" id="stats">
@@ -718,7 +730,7 @@
 			</div>
 		</div>
 
-		<div class="hero-body background-banner background-2Dplan-robot">
+		<div class="hero-body background-banner background-2blanks-board-chain">
 		</div>
 		
 		<div class="hero-body" id="contact">
