--- a/index.html
+++ b/index.html
@@ -106,10 +106,10 @@
     		background-color: #363636;
 		}
 
-		.content h2 {
+		.content h3 {
 			color: white;
 		}
-		.content h4 {
+		.content h5 {
 			color: white;
 		}
 		.progress.is-arduino1::-webkit-progress-value {
@@ -371,16 +371,16 @@
 				  Information
 				</p>
 				<div class="content is-large">
-					<h2>Qui sommes-nous ?</h1>
+					<h3>Qui sommes-nous ?</h3>
 					<p>Nous sommes en 2ème année en école supérieure en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
 					<p>Nous ne nous limitons pas qu'à la programmation en C/C++ (Arduino) comme demandé, en effet nous développons aussi une application pour ordinateur ainsi que le site sur lequel vous vous trouvez actuellement.</p>
-					<h2>Consignes</h2>
-					<h4>Purement pour le cours, nous devons respecter ces consignes :</h4>
+					<h3>Consignes</h3>
+					<h5>Purement pour le cours, nous devons respecter ces consignes :</h5>
 					<ul>
 						<li>Robot mobile</li>
 						<li>Radio commandée => Télécommande a réalisé avec un Arduino + Bluetooth + …</li>
 					</ul>
-					<h4>Comme composants que l'on doit intégrer il y a :</h4>
+					<h5>Comme composants que l'on doit intégrer il y a :</h5>
 					<ul>
 						<li>Sonar (ultrason)</li>
 						<li>Bras articulé (servo Moteur)</li>
@@ -389,10 +389,10 @@
 						<li>LEDs</li>
 						<li>Buzzer (optionnel)</li>
 					</ul>
-					<h2>Où en sommes-nous ?</h1>
+					<h3>Où en sommes-nous ?</h3>
 					<p>Nous avons un projet ambitieux ! Nous sommes motivés !</p>
 					<p>Pour savoir un peu où nous en sommes :</p>
-					<p style="font-size:1.2em;">Arduino (tous) :</p>
+					<h5>Arduino (tous) :</h5>
 					<progress class="progress is-arduino1" style="height: 1.5rem;" value="5" max="100">5%</progress>
 					<div class="columns is-mobile">
 						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
@@ -406,9 +406,9 @@
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
 					</div>
-					<p style="font-size:1.2em;">Application (Davide et Ugo) :</p>
+					<h5>Application (Davide et Ugo) :</h5>
 					<progress class="progress" style="height: 1.5rem;" value="30" max="100">30%</progress>
-					<p style="font-size:1.2em;">Site (Antonin) :</p>
+					<h5>Site (Antonin) :</h5>
 					<progress class="progress is-info" style="height: 1.5rem;" value="35" max="100">35%</progress>
 				</div>
 			</div>
