--- a/index.html
+++ b/index.html
@@ -106,10 +106,7 @@
     		background-color: #363636;
 		}
 
-		.content h3 {
-			color: white;
-		}
-		.content h5 {
+		.content h1, .content h3, .content h5 {
 			color: white;
 		}
 		.progress.is-arduino1::-webkit-progress-value {
