--- a/index.html
+++ b/index.html
@@ -364,9 +364,9 @@
 
 		<div class="hero-body">
 			<div class="container">
-				<p class="title has-text-centered" id="information">
-				  Information
-				</p>
+				<h1 class="title has-text-centered" id="information">
+					Information
+				</h1>
 				<div class="content is-large">
 					<h3>Qui sommes-nous ?</h3>
 					<p>Nous sommes en 2ème année en école supérieure en automatisation. Dans le cadre du cours de robotique, nous avons décidé de faire un tank télécommandé.</p>
