--- a/index.html
+++ b/index.html
@@ -364,7 +364,7 @@
 
 		<div class="hero-body">
 			<div class="container">
-				<h1 class="title has-text-centered" id="information">
+				<h1 class="title is-1 has-text-centered" id="information">
 					Information
 				</h1>
 				<div class="content is-large">
@@ -416,8 +416,8 @@
 		
 		<div class="hero-body" id="equipe">
 			<div class="container">
-				<p class="title has-text-centered" id="information">
-				  Equipe
+				<p class="title is-1  has-text-centered" id="information">
+					Equipe
 				</p>
 				<br/>
 				<br/>
@@ -475,8 +475,8 @@
 		
 		<div class="hero-body" id="actu">
 			<div class="container">
-				<p class="title has-text-centered" id="information">
-				  Actualités
+				<p class="title is-1 has-text-centered" id="information">
+					Actualités
 				</p>
 				<div class="content is-large">
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
@@ -604,8 +604,8 @@
 		
 		<div class="hero-body" id="galerie">
 			<div class="container">
-				<p class="title has-text-centered" id="information">
-				  Galerie
+				<p class="title is-1 has-text-centered" id="information">
+					Galerie
 				</p>
 				<div class="tile is-ancestor">
 					<div class="tile is-parent is-horizontal">
@@ -662,8 +662,8 @@
 		
 		<div class="hero-body" id="stats">
 			<div class="container">
-				<p class="title has-text-centered" id="information">
-				  Statistiques
+				<p class="title is-1 has-text-centered" id="information">
+					Statistiques
 				</p>
 				<div class="content">
 					<table class="table">
@@ -732,8 +732,8 @@
 		
 		<div class="hero-body" id="contact">
 			<div class="container">
-				<p class="title has-text-centered">
-				  Contact
+				<p class="title is-1 has-text-centered">
+					Contact
 				</p>
 				<div class="content is-large has-text-centered">
 					<p class="subtitle is-8">Par mail : <a class="button" href="mailto:info@arduitank.be">Cliquez ici</a></p>
