--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
 					</div>
 					<div class="columns is-mobile">
-						<div class="column">
+						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
 							<p>Télécommande :</p>
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
