--- a/index.html
+++ b/index.html
@@ -392,13 +392,13 @@
 					<h5>Arduino (tous) :</h5>
 					<progress class="progress is-arduino1" style="height: 1.5rem;" value="5" max="100">5%</progress>
 					<div class="columns is-mobile">
-						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
+						<div class="column is-half-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
 							<p>Robot :</p>
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
 					</div>
 					<div class="columns is-mobile">
-						<div class="column is-4-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
+						<div class="column is-half-mobile is-3-tablet is-2-desktop is-2-widescreen is-2-fullhd">
 							<p>Télécommande :</p>
 						</div>
 						<div class="column"><progress class="progress is-arduino2" value="5" max="100">5%</progress></div>
