--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			font-size: 1.5rem;
 			border-radius: 20px;
 			transition-duration: 1s;
-			/*transition-delay: 0.9s;*/
+			transition-delay: 0s; /* 0.9s */
 		}
 		
 		.collapsible.active, .collapsible:hover {
