--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 			font-size: 1.5rem;
 			border-radius: 20px;
 			transition-duration: 1s;
-			transition-delay: 0s; /* 0.9s */
+			/*transition-delay: 0s;*/ /* 0.9s */
 		}
 		
 		.collapsible.active, .collapsible:hover {
@@ -482,14 +482,14 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
-				<button type="button" class="collapsible" id="20022021-1">20/02/2021 - Plan 2D - Télécommande</button>
+				<button type="button" class="collapsible" id="20022021-1" style="transition-delay: 0s;">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
 					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designé par Ugo.</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
 					<p style="padding: 0 18px 2rem 18px;">Au même titre que "Pas de bras, pas de chocolat", ici c'est : Pas de télécommande, pas de robot tank !</p>
 				</div>
-				<button type="button" class="collapsible" id="20022021-2">20/02/2021 - Impression 3D chaîne et engrenage & CNC flancs du tank</button>
+				<button type="button" class="collapsible" id="20022021-2" style="transition-delay: 0s;">20/02/2021 - Impression 3D chaîne et engrenage & CNC flancs du tank</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">La machine Davide est en route, on ne l'arrête plus !</p>
 					<p style="padding: 0 18px;">Tous les maillons sont imprimés reste plus qu'à en faire une belle chaîne :</p>
@@ -536,7 +536,7 @@
 					<p style="padding: 0 18px">Nous voici bien avancé pour la partie physique du robot, mais il n'y a pas que Davide qui a travaillé ! Regardez la partie plan 2D de la télécommande juste en dessous !</p>
 					<p style="padding: 0 18px 2rem 18px;">Pour Davide, comme on ne l'arrête plus, il a continué toute la nuit et voilà que le tank est désormais totalement terminé ! Non c'est une blague, faut quand même pas abuser !</p>
 				</div>
-				<button type="button" class="collapsible" id="19022021-1">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
+				<button type="button" class="collapsible" id="19022021-1" style="transition-delay: 0s;">19/02/2021 - Impression 3D chaîne - Echec TPU, redesign</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Aïe aïe ! Coup dur ! C'était pas loin mais visiblement un soucis d'impression de la chaîne souple qui dévait être totalement impriméee en TPU.</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812406562571812924/IMG_20210219_203215.jpg" alt="Chaîne en TPU fail moitié impression">
@@ -569,7 +569,7 @@
 					</div>
 					<p style="padding: 0 18px 2rem 18px;">C'est que cela prend forme tout ça !! Une nuit et tout sera imrpimé ! :p</p>
 				</div>
-				<button type="button" class="collapsible" id="17022021-1">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
+				<button type="button" class="collapsible" id="17022021-1" style="transition-delay: 0s;">17/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
 					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
