--- a/index.html
+++ b/index.html
@@ -873,10 +873,10 @@
 			var content = this.nextElementSibling;
 			if (content.style.maxHeight){
 			  content.style.maxHeight = null;
-			  this.classList.style.transitionDelay = "0s";
+			  this.style.transitionDelay = "0s";
 			} else {
 			  content.style.maxHeight = content.scrollHeight + "px";
-			  this.classList.style.transitionDeley = "0.9s";
+			  this.style.transitionDeley = "0.9s";
 			}
 		  });
 		}
