--- a/index.html
+++ b/index.html
@@ -876,7 +876,7 @@
 			  this.style.transitionDelay = "0.9s";
 			} else {
 			  content.style.maxHeight = content.scrollHeight + "px";
-			  this.style.transitionDeley = "0.9s";
+			  this.style.transitionDelay = "0s";
 			}
 		  });
 		}
