--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
 			outline: none;
 			font-size: 1.5rem;
 			border-radius: 20px;
-			transition-duration: 1s;
+			/*transition-duration: 1s;*/
 			/*transition-delay: 0s;*/ /* 0.9s */
 		}
 		
@@ -874,9 +874,11 @@
 			if (content.style.maxHeight){
 			  content.style.maxHeight = null;
 			  this.style.transitionDelay = "0.9s";
+			  this.style.transitionDuration = "1s";
 			} else {
 			  content.style.maxHeight = content.scrollHeight + "px";
 			  this.style.transitionDelay = "0s";
+			  this.style.transitionDuration = "0s";
 			}
 		  });
 		}
