--- a/index.html
+++ b/index.html
@@ -261,8 +261,8 @@
 							<a class="navbar-item" href="./">
 								Accueil
 							</a>
-							<a class="navbar-item" href="./#information">
-								Information
+							<a class="navbar-item" href="./#informations">
+								Informations
 							</a>
 							<a class="navbar-item" href="./#equipe">
 								Équipe
@@ -364,8 +364,8 @@
 
 		<div class="hero-body">
 			<div class="container">
-				<h1 class="title is-1 has-text-centered" id="information">
-					Information
+				<h1 class="title is-1 has-text-centered" id="informations">
+					Informations
 				</h1>
 				<div class="content is-large">
 					<h3>Qui sommes-nous ?</h3>
@@ -485,7 +485,7 @@
 				<button type="button" class="collapsible" id="20022021-1" style="transition-delay: 0s;">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
-					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designé par Ugo.</p>
+					<p style="padding: 0 18px;">Voici donc la réalisation en 2D de la télécommande qui servira à piloter le robot ! Celle-ci a été designée par Ugo.</p>
 					<img style="padding: 0 18px 1rem 18px;" width="50%" src="https://media.discordapp.net/attachments/807610088361164810/812705156801101844/unknown.png" alt="Plan 2D télécommande">
 					<p style="padding: 0 18px 2rem 18px;">Au même titre que "Pas de bras, pas de chocolat", ici c'est : Pas de télécommande, pas de robot tank !</p>
 				</div>
