--- a/index.html
+++ b/index.html
@@ -482,6 +482,14 @@
 					<p>Dans cette section, vous pouvez admirer l'avancée du projet !</p>
 					<p>Vous pouvez voir toutes les étapes à la réalisation du robot.</p>
 				</div>
+				<button type="button" class="collapsible" id="17022021-1" style="transition-delay: 0s;">21/02/2021 - Modélisation 3D - Côté et importation des composants électronique du robot</button>
+				<div class="content collapse is-medium">
+					<p style="padding: 1rem 18px 0 18px;">Hop la boum ! La suite continue !</p>
+					<p style="padding: 0 18px;">Davide est en forme et continue à modéliser tout ça !</p>
+					<p style="padding: 0 18px;">Les différents éléments électronique servant pour le robot sont importés dans Fusion 360. Nous retrouvons : le RFID, l'ultrason, le servo moteur, le moteur pas à pas et évidement l'arduino nano.</p>
+					<p style="padding: 0 18px">C'est également le moment de modéliser un des flancs du bas du tank. Le but est de fixer les roulements, chenilles, moteur pas à pas et autres pour pouvoir tester sommairement lors d'un test.</p>
+					<p style="padding: 0 18px 2rem 18px;">Le but de ce futur test sera de voir si le couple du moteur pas à pas sera suffisant pour faire tourner la chenille mais aussi pour avoir un minimum de vitesse possible !</p>
+				</div>
 				<button type="button" class="collapsible" id="20022021-1" style="transition-delay: 0s;">20/02/2021 - Plan 2D - Télécommande</button>
 				<div class="content collapse is-medium">
 					<p style="padding: 1rem 18px 0 18px;">C'est bien d'avancer côté robot/tank, mais la télécommande est également très importante !</p>
@@ -650,6 +658,29 @@
 						<div class="tile is-child">
 							<figure class="image">
 								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813182836126253116/IMG_20210221_235648.jpg" alt="Base tank avec côté sur le dos">
+							</figure>
+						</div>
+					</div>
+				</div>
+				<div class="tile is-ancestor">
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/501009071365685249/813070033399054356/IMG_20210221_162156.jpg" alt="Base tank avec côtés">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://media.discordapp.net/attachments/501009071365685249/813434863888760902/unknown.png" alt="Base tank avec côtés et chaîne">
+							</figure>
+						</div>
+					</div>
+					<div class="tile is-parent is-horizontal">
+						<div class="tile is-child">
+							<figure class="image">
+								<img src="https://cdn.discordapp.com/attachments/807610088361164810/813431082938007572/unknown.png" alt="Base tank avec côté sur le dos">
 							</figure>
 						</div>
 					</div>
